<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="ViewModel.HomeCar">

    <TextView
        android:id="@+id/your_cars"
        android:layout_width="135dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="292dp"
        android:background="@drawable/bordered_background"
        android:gravity="center"
        android:text="@string/cars"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/manage_your_cars_insurance"
        android:layout_width="322dp"
        android:layout_height="81dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/shadow_background"
        android:gravity="center"
        android:text="@string/manage_your_cars_insurance"
        android:textColor="@color/blue_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_cars" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="384dp"
        android:layout_height="433dp"
        android:layout_marginTop="16dp"
        android:overScrollMode="never"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_your_cars_insurance"
        tools:listitem="@layout/car_item" />

    <Button
        android:id="@+id/add_car"
        android:layout_width="172dp"
        android:layout_height="74dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_new_car"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv" />

    <Button
        android:id="@+id/taw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="9dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv" />


</androidx.constraintlayout.widget.ConstraintLayout>