<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent"
    tools:context="com.example.econstat_android.ViewModel.CarDetailsFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:background="@color/blue_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemType" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemNumSerie" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:background="@color/blue_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemFiscalPower" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemMatricule" />


    <ImageView
        android:id="@+id/ivItemCar"
        android:layout_width="223dp"
        android:layout_height="215dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/bmw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvItemBrand" />

    <TextView
        android:id="@+id/tvItemBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="120dp"
        android:text="brand"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivItemCar" />

    <TextView
        android:id="@+id/tvItemType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="105dp"
        android:gravity="center_horizontal"
        android:text="Type"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemBrand" />

    <TextView
        android:id="@+id/tvItemNumSerie"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="95dp"
        android:text="Num Serie"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemType" />

    <TextView
        android:id="@+id/tvItemFiscalPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="126dp"
        android:gravity="center_horizontal"
        android:text="Fiscal Power"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemNumSerie" />

    <TextView
        android:id="@+id/tvItemMatricule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="90dp"
        android:gravity="center_horizontal"
        android:text="Immatriculation"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemFiscalPower" />

    <TextView
        android:id="@+id/brand"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="40dp"
        android:text="@string/brand"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivItemCar" />

    <TextView
        android:id="@+id/type"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:text="@string/type"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvItemType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand" />

    <TextView
        android:id="@+id/num_serie"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="36dp"
        android:text="@string/num_serie"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <TextView
        android:id="@+id/fiscal_power"
        android:layout_width="119dp"
        android:layout_height="36dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="36dp"
        android:text="@string/fiscal_power"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_serie" />

    <TextView
        android:id="@+id/matricule"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="36dp"
        android:text="@string/num_immatriculation"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiscal_power" />

    <ImageButton
        android:id="@+id/btn_qr"
        android:layout_width="84dp"
        android:layout_height="75dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/white"
        android:src="@drawable/qr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ivItemCar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/your_cars"
        android:layout_width="176dp"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/bordered_background"
        android:gravity="center"
        android:text="@string/details"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivItemCar"
        app:layout_constraintEnd_toStartOf="@+id/btn_qr"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>